# src/main/java/com/teletubbies/course/auth/AuthController.java
@@ -1,22 +1,20 @@
 package com.teletubbies.course.auth;
 
-import jakarta.validation.Valid;
+import com.teletubbies.course.AuthApi;
+import com.teletubbies.course.model.LoginRequest;
+import com.teletubbies.course.model.LoginResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/auth")
 @RequiredArgsConstructor
-public class AuthController {
+public class AuthController implements AuthApi {
 
   private final AuthService authService;
 
-  @PostMapping("/login")
-  public ResponseEntity<LoginResponse> login(@Valid @RequestBody final LoginRequest request) {
-    return ResponseEntity.ok(authService.login(request));
+  @Override
+  public ResponseEntity<LoginResponse> login(final LoginRequest loginRequest) {
+    return ResponseEntity.ok(authService.login(loginRequest));
   }
 }
